# diplomski

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: __init__.py  config.py  main.py
backend/app/api/: __init__.py  databases.py  deps.py  evaluate.py  health.py  providers.py  query.py  schema.py
backend/app/core/: __init__.py  audit.py  exceptions.py  logging.py  pricing.py  timing.py
backend/app/db/: __init__.py  engine.py  schema_inspector.py
backend/app/evaluation/: __init__.py  bird_descriptions.py  bird_loader.py  comparators.py  failure_analyzer.py  few_shot_retrieval.py  metrics.py  runner.py  security_suite.py
backend/app/llm/: __init__.py  anthropic_provider.py  base.py  factory.py  gemini_provider.py  ollama_provider.py  openai_provider.py
backend/app/llm/prompts/: __init__.py  builder.py  decomposition.py  entity_extraction.py  schema_linking.py  strategies.py  templates.py
backend/app/models/: __init__.py  query.py  schema.py  validation.py
backend/app/services/: __init__.py  benchmark_executor.py  benchmark_query_service.py  error_classifier.py  execution_service.py  query_service.py  result_judge.py  result_verifier.py  retry_engine.py  self_consistency.py  value_mapper.py
backend/app/utils/: __init__.py
backend/app/validation/: __init__.py  ast_checks.py  enforcers.py  safety_checks.py  semantic_checks.py  validator.py  value_checks.py
backend/scripts/: analyze_failures.py  compare_runs.py  download_bird.py  run_benchmark_cli.py  test_llm.py  test_validator.py
backend/tests/: __init__.py  conftest.py
backend/tests/benchmark/: __init__.py  test_comparator.py  test_metrics.py
backend/tests/integration/: __init__.py  test_api_query.py
backend/tests/unit/: __init__.py  test_extract_sql.py  test_factory.py  test_few_shot_retrieval.py  test_prompt_builder.py  test_result_judge.py
backend/tests/validation/: __init__.py  test_security.py
data/benchmark_runs/: 20260517T213148Z.csv  20260517T213148Z.json  20260517T213414Z.csv  20260517T213414Z.json  20260517T215606Z.csv  20260517T215606Z.json  20260521T222825Z.csv  20260521T222825Z.json  20260521T224503Z.csv  20260521T224503Z.json  20260521T230430Z.csv  20260521T230430Z.json  20260521T232258Z.csv  20260521T232258Z.json  20260522T000209Z.csv  20260522T000209Z.json  20260522T000445Z.csv  20260522T000445Z.json  20260522T001559Z.csv  20260522T001559Z.json  20260522T001707Z.csv  20260522T001707Z.json  20260522T003501Z.csv  20260522T003501Z.json  20260523T222754Z.csv  20260523T222754Z.json  20260523T225911Z.csv  20260523T225911Z.json  20260523T230458Z.csv  20260523T230458Z.json  20260523T230623Z.csv  20260523T230623Z.json  20260523T230914Z.csv  20260523T230914Z.json  20260523T231415Z.csv  20260523T231415Z.json  20260523T232303Z.csv  20260523T232303Z.json  20260523T232733Z.csv  20260523T232733Z.json  (+55 more)
frontend/: Dockerfile  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: CopyButton.tsx  DatabasePicker.tsx  ErrorPanel.tsx  LatencyChart.tsx  ProviderBadge.tsx  QueryForm.tsx  QueryHistory.tsx  ResultTable.tsx  SchemaViewer.tsx  SqlDisplay.tsx  StatusBadge.tsx
frontend/src/lib/: api.ts  history.ts  types.ts
scripts/: create_readonly_user.sql
