[project]
name = "nl2sql-backend"
version = "0.1.0"
description = "NL2SQL backend — FastAPI service for natural-language to SQL"
requires-python = ">=3.12"
readme = "../README.md"

# Dependency philosophy: direct SDKs only, no wrapper frameworks.
# No LangChain / LlamaIndex — the project demonstrates explicit control
# over prompts, validation, and execution rather than wrapper-over-wrapper
# abstraction.
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    # SQLite async driver — used only for the BIRD benchmark (gold SQL is
    # written for SQLite; converting to Postgres would break fidelity).
    "aiosqlite>=0.20.0",

    # Pydantic v2 — API request/response DTOs only.
    "pydantic>=2.8.0",

    # SQL parsing for the AST-based validator.
    "sqlglot>=25.0.0",

    # OpenAI SDK — single LLM provider.
    "openai>=1.50.0",
    # httpx — kept for the OpenAI-compatible base_url paths.
    "httpx>=0.27.0",

    # Structured logging.
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
ignore = [
    "E501",  # long docstrings are OK
    "B008",  # FastAPI ``= Depends(...)`` is the canonical pattern, not a bug
    "B904",  # ``raise ... from`` often unnecessary in defensive catches
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning:sqlglot",
    "ignore::pytest.PytestUnraisableExceptionWarning",
]
